Refactor: Update package name to be valid for npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phân-tích-tài-liệu-nghiên-cứu",
+  "name": "gemini-dcm-research-analyzer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
