--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,9 @@
     ],
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "moduleResolution": "node",
-    "types": [
-      "node"
-    ],
     "isolatedModules": true,
     "moduleDetection": "auto",
     "allowJs": true,
